 * = Fixed ExternalInterface calls being made available for Flash 9 versions <9.0.28 which aren't supported
 * + Fixed use of & producing invalid XHTML in the <object> and <embed> tags.
 * - Removed the use of the embed tag (using the <object> sample from the Flash Satay method)
 * = Updated plugins to work with code rewrite changes.
 * = Extracted FileProgress object in to its own file.

 * --------- Version 2.0.2 -----------
 * = Fixed a bug where post params could not be added to the current file (because it is removed from the queue when it becomes current)
 * = Fixed a conversion error when converting kilobytes to bytes in the file size check
 * = Fixed a problem in the documentation that said the file_size_limit was bytes when it is actually kilobytes
 * + Added formatting to the documentation, a table of contents, and details for each setting .
 * + Added units for file_size_limit setting. The setting understands B, KB, MB, GB. Default is KB.
 * + Added a check for the ExternalInterface functions in flashReady so SWFUpload will not fire the loaded event if those are not available.
  
 * --------- Version 2.0.1 -----------
 * = Fixed a bug where zero-byte files would stop file the queuing process.
 * = Finished updating Features Demo
 * + Added GetFileByIndex(i) that gets a JavaScript File Object.  The index never changes. Finished files continue to be available.
 *    The JavaScript GetFile function will accept a file_id or an index.
 * + Added CheckFileSize constants to replace the magic numbers
 * + Added some code in an attempt to fix "Script is running slowly" error messages
 * = Better cleanup of FileReference objects
 
 * --------- Version 2.0 -----------
 * + Re-created SWFUpload in Actionscript v2 for Flash 8 compatibility. Flash 8 loses POST and Server Data features.  The two versions are otherwise fully compatible.
 *    Flash 8 uses URL to pass post_params/file_params.